DELETE salas de cine
